Improvements in admins, bug is missing

--- a/src/containers/App/styles.pcss
+++ b/src/containers/App/styles.pcss
@@ -8,6 +8,11 @@
   .drawer-paper--open,
   .drawer-paper--closed {
     padding-top: 64px;
+    a.active {
+      > div {
+        background-color: #e6e6e6;
+      }
+    }
   }
   .drawer-paper--open {
     max-width: 250px;
