--- a/src/containers/Admins/styles.pcss
+++ b/src/containers/Admins/styles.pcss
@@ -1,9 +1,11 @@
 .admins {
   padding: 16px;
+  padding-top: 0;
   .actions {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 16px;
   }
   .buttons {
     margin-top: 16px;
