--- a/src/containers/Dashboard/styles.pcss
+++ b/src/containers/Dashboard/styles.pcss
@@ -1,5 +1,14 @@
 .dashboard {
   padding: 16px;
+  .card {
+    margin-bottom: 32px;
+    padding: 16px;
+    h4 {
+      color: gray;
+      font-weight: normal;
+      margin-bottom: 16px;
+    }
+  }
   .actions {
     display: flex;
     justify-content: flex-end;
