--- a/src/global.pcss
+++ b/src/global.pcss
@@ -78,3 +78,16 @@ html {
   width: 100%;
   min-height: 100%;
 }
+
+.circular-progress__container {
+  position: relative;
+  height: 24px;
+  .circular-progress {
+    position: absolute;
+    top: -12px;
+    left: -12px;
+  }
+  .circular-progress--button {
+    height: 24px;
+  }
+}
