--- a/src/containers/App/styles.pcss
+++ b/src/containers/App/styles.pcss
@@ -2,9 +2,17 @@
   margin-top: 64px;
   margin-left: 240px;
   padding: 16px;
+  background-color: #f5f5f5;
+}
+
+html {
+  background-color: #f5f5f5;
 }
 
 #root {
+  width: 100%;
+  background-color: #f5f5f5;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
   header {
     background-color: white;
     z-index: 999;
@@ -24,7 +32,7 @@
   .drawer {
     > div {
       z-index: 1000;
-      box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.5);
+      box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
       padding-top: 102px;
       background-color: #353a3f;
       span {
@@ -86,6 +94,7 @@
     left: 0;
     right: 0;
     width: 100%;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     .toolbar {
       padding-left: 12px;
       padding-right: 24px;
