--- a/src/containers/App/styles.pcss
+++ b/src/containers/App/styles.pcss
@@ -5,6 +5,18 @@
   background-color: #f5f5f5;
 }
 
+.toolbar__logo {
+  background-color: #9bb8d1;
+  width: 100%;
+  width: calc(100% + 4px);
+  border-right: 4px solid #9bb8d1;
+  height: 65px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
 html {
   background-color: #f5f5f5;
 }
@@ -35,6 +47,7 @@ html {
       box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
       padding-top: 102px;
       background-color: #353a3f;
+      border-right: 0;
       span {
         color: #fff;
       }
@@ -94,10 +107,17 @@ html {
     left: 0;
     right: 0;
     width: 100%;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
     .toolbar {
       padding-left: 12px;
       padding-right: 24px;
+      .user-image {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        background-color: #d7d7d7;
+        margin-left: 16px;
+      }
       .toolbar__content {
         display: flex;
         flex-grow: 1;
