--- a/src/containers/App/styles.pcss
+++ b/src/containers/App/styles.pcss
@@ -3,10 +3,14 @@
   margin-left: 240px;
   padding: 16px;
   background-color: #f5f5f5;
+  transition: 0.2s;
+  &.--full-width {
+    margin-left: 75px;
+  }
 }
 
 .toolbar__logo {
-  background-color: #9bb8d1;
+  background: linear-gradient(90deg, #9cd4d9, #92acd0);
   width: 100%;
   width: calc(100% + 4px);
   border-right: 4px solid #9bb8d1;
@@ -15,6 +19,42 @@
   top: 0;
   left: 0;
   z-index: 1000;
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  img {
+    transition: 0.2s;
+    margin-right: auto;
+    max-width: 80px;
+  }
+  .toggle-button {
+    width: 40px;
+    height: 40px;
+    position: relative;
+    cursor: pointer;
+    &::before {
+      position: absolute;
+      content: '';
+      display: block;
+      width: 15px;
+      height: 15px;
+      border: 1px solid white;
+      border-radius: 50%;
+      top: 12px;
+      left: 22px;
+    }
+    &::after {
+      position: absolute;
+      content: '';
+      display: block;
+      width: 9px;
+      height: 9px;
+      background-color: white;
+      border-radius: 50%;
+      top: 15px;
+      left: 25px;
+    }
+  }
 }
 
 html {
@@ -43,11 +83,13 @@ html {
   }
   .drawer {
     > div {
+      transition: 0.2s;
       z-index: 1000;
       box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
       padding-top: 102px;
       background-color: #353a3f;
       border-right: 0;
+      max-width: 239px;
       span {
         color: #fff;
       }
@@ -72,6 +114,23 @@ html {
       bottom: 32px;
       left: 0;
       height: 49.5px;
+    }
+    &.--hidden {
+      .toggle-button::after {
+        display: none;
+      }
+      > div {
+        max-width: 75px;
+        &:hover {
+          max-width: 239px;
+          img {
+            max-width: 80px;
+          }
+        }
+        img {
+          max-width: 50px;
+        }
+      }
     }
   }
   /* .drawer-paper--open,
