--- a/src/containers/App/styles.pcss
+++ b/src/containers/App/styles.pcss
@@ -128,25 +128,11 @@ html {
           }
         }
         img {
-          max-width: 50px;
+          max-width: 45px;
         }
       }
     }
   }
-  /* .drawer-paper--open,
-  .drawer-paper--closed {
-    padding-top: 64px;
-  }
-  .drawer-paper--open {
-    max-width: 250px;
-    transition: 0.5s;
-    overflow: hidden;
-  }
-  .drawer-paper--closed {
-    max-width: 75px;
-    overflow: hidden;
-    transition: 0.5s;
-  } */
   .save-icon {
     margin-left: 8px;
   }
@@ -167,6 +153,9 @@ html {
     right: 0;
     width: 100%;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
+    &.--full-width {
+      padding-left: 91px;
+    }
     .toolbar {
       padding-left: 12px;
       padding-right: 24px;
