Added filter component

--- a/src/containers/App/styles.pcss
+++ b/src/containers/App/styles.pcss
@@ -174,10 +174,46 @@ html {
         align-items: center;
       }
       .toolbar__actions {
+        display: flex;
+        align-items: center;
+        > * {
+          margin-left: 8px;
+        }
+        .date-filter-container {
+          position: relative;
+          .DayPicker {
+            position: absolute;
+            right: 0;
+            top: 40px;
+            background-color: white;
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+            border-radius: 4px;
+          }
+        }
       }
     }
     .menu-button {
       margin-right: 30px;
     }
   }
+}
+
+.DayPicker {
+  color: black;
+}
+.Selectable
+  .DayPicker-Day--selected:not(.DayPicker-Day--start):not(.DayPicker-Day--end):not(.DayPicker-Day--outside) {
+  background-color: #f0f8ff !important;
+  color: #4a90e2;
+}
+.Selectable .DayPicker-Day {
+  border-radius: 0 !important;
+}
+.Selectable .DayPicker-Day--start {
+  border-top-left-radius: 50% !important;
+  border-bottom-left-radius: 50% !important;
+}
+.Selectable .DayPicker-Day--end {
+  border-top-right-radius: 50% !important;
+  border-bottom-right-radius: 50% !important;
 }
