--- a/src/global.pcss
+++ b/src/global.pcss
@@ -78,6 +78,30 @@ html {
   min-height: 100%;
 }
 
+hr {
+  width: 100%;
+  height: 1px;
+  background-color: #d2d2d2;
+  margin: 10px 0;
+}
+
+h4 {
+  font-weight: 400;
+  margin-bottom: 8px;
+}
+
+h5 {
+  font-size: 0.8rem;
+  color: #333333;
+  font-weight: 500;
+  margin-bottom: 12px;
+}
+h6 {
+  color: gray;
+  font-weight: 500;
+  font-size: 0.8rem;
+}
+
 .circular-progress__container {
   position: relative;
   height: 24px;
