--- a/src/containers/Login/styles.pcss
+++ b/src/containers/Login/styles.pcss
@@ -7,6 +7,9 @@
     display: flex;
     flex-direction: column;
     max-width: 300px;
+    input:-webkit-autofill + label {
+      transform: translate(14px, -6px) scale(0.75);
+    }
   }
   .submit {
     margin-top: 16px;
