Added config to support route protection

--- a/src/containers/App/styles.pcss
+++ b/src/containers/App/styles.pcss
@@ -1,3 +1,19 @@
+.loading-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  p {
+    margin-top: 32px;
+    font-weight: 500;
+  }
+  img {
+    max-width: 200px;
+  }
+}
+
 .content {
   margin-top: 64px;
   margin-left: 240px;
