--- a/src/containers/App/styles.pcss
+++ b/src/containers/App/styles.pcss
@@ -106,6 +106,7 @@ html {
       background-color: #353a3f;
       border-right: 0;
       max-width: 239px;
+      overflow-y: unset;
       span {
         color: #fff;
       }
@@ -176,11 +177,16 @@ html {
       padding-left: 12px;
       padding-right: 24px;
       .user-image {
+        display: flex;
         width: 30px;
         height: 30px;
         border-radius: 50%;
         background-color: #d7d7d7;
         margin-left: 16px;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        font-weight: bold;
       }
       .toolbar__content {
         display: flex;
