--- a/src/containers/Login/styles.pcss
+++ b/src/containers/Login/styles.pcss
@@ -10,6 +10,9 @@
     input:-webkit-autofill + label {
       transform: translate(14px, -6px) scale(0.75);
     }
+    p {
+      color: red;
+    }
   }
   .submit {
     margin-top: 16px;
