--- a/src/global.pcss
+++ b/src/global.pcss
@@ -114,3 +114,19 @@ h6 {
     height: 24px;
   }
 }
+
+.loading-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  p {
+    margin-top: 32px;
+    font-weight: 500;
+  }
+  img {
+    max-width: 200px;
+  }
+}
