--- a/src/containers/AdminApp/Rates/styles.pcss
+++ b/src/containers/AdminApp/Rates/styles.pcss
@@ -2,6 +2,9 @@
   padding: 16px;
   display: flex;
   flex-direction: row;
+  > div {
+    flex-grow: 1;
+  }
   .card {
     margin-bottom: 24px;
     &:first-child {
