--- a/src/containers/AdminApp/styles.pcss
+++ b/src/containers/AdminApp/styles.pcss
@@ -164,6 +164,7 @@ html {
         padding-left: 12px;
         padding-right: 24px;
         .user-image {
+          cursor: pointer;
           display: flex;
           width: 40px;
           height: 40px;
