Added user edit

--- a/src/containers/AdminApp/styles.pcss
+++ b/src/containers/AdminApp/styles.pcss
@@ -88,7 +88,7 @@ html {
         padding-top: 102px;
         background-color: #353a3f;
         border-right: 0;
-        max-width: 239px;
+        width: 239px;
         overflow-y: unset;
         span {
           color: #fff;
@@ -120,10 +120,10 @@ html {
           display: none;
         }
         > div {
-          max-width: 75px;
+          width: 75px;
           overflow-x: hidden;
           &:hover {
-            max-width: 239px;
+            width: 239px;
             .toggle-button {
               display: block;
             }
