--- a/src/containers/ClientApp/Dashboard/styles.pcss
+++ b/src/containers/ClientApp/Dashboard/styles.pcss
@@ -1,4 +1,5 @@
 #client-app {
+  background-color: #f4f4f4;
   .dashboard {
     display: flex;
     flex-wrap: wrap;
@@ -10,8 +11,9 @@
   }
 
   .card {
+    background-color: white;
     margin: 16px;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
     padding: 16px;
     border-radius: 4px;
     min-height: 270px;
