--- a/src/containers/ClientApp/styles.pcss
+++ b/src/containers/ClientApp/styles.pcss
@@ -1,8 +1,41 @@
 #client-app {
   header {
     display: flex;
-    justify-content: space-between;
-    margin: 20px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+    height: 65px;
+    .header-content {
+      background-color: white;
+      flex: 1;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row;
+      align-items: center;
+      padding: 0 24px;
+      h3 {
+        font-weight: 400;
+        font-size: 1rem;
+      }
+      .user-container--info {
+        width: 40px;
+        height: 40px;
+        background-color: #cccccc;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+      }
+      a {
+        color: inherit;
+      }
+    }
+    .logo-container {
+      padding: 10px 20px;
+      background: linear-gradient(90deg, #9cd4d9, #92acd0);
+      img {
+        height: 100%;
+        width: 65px;
+      }
+    }
     > div {
       > span {
         font-weight: 400;
@@ -42,25 +75,6 @@
     }
     .user-container {
       display: flex;
-    }
-    .user-container--info {
-      h3 {
-        color: #252525;
-        font-size: 1rem;
-        font-weight: 500;
-      }
-      span {
-        position: relative;
-        font-size: 0.9rem;
-        color: gray;
-        &::before {
-          position: absolute;
-          content: '';
-          display: block;
-          width: 8px;
-          height: 8px;
-        }
-      }
     }
   }
 }
@@ -107,6 +121,123 @@ h5 {
     }
     span {
       font-weight: 500;
+    }
+  }
+}
+
+#client-app {
+  background-color: #f4f4f4;
+  .dashboard {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 8px;
+  }
+
+  .card-container {
+    width: 50%;
+  }
+
+  .card {
+    background-color: white;
+    margin: 16px;
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+    padding: 16px;
+    border-radius: 4px;
+    min-height: 270px;
+    &.--no-padding {
+      padding: 0;
+      h4 {
+        padding: 12px;
+        padding-bottom: 8px;
+      }
+    }
+    h4 {
+      color: gray;
+      font-weight: 500;
+      font-size: 0.9rem;
+      margin-bottom: 8px;
+    }
+  }
+
+  .chart-data-container {
+    display: flex;
+    align-items: center;
+  }
+  .pie-chart__legend {
+    display: flex;
+    flex-direction: column;
+    font-size: 0.9rem;
+    p {
+      display: inline-block;
+    }
+    > div {
+      margin-bottom: 12px;
+      position: relative;
+      &:last-child {
+        margin-bottom: 0;
+      }
+      .bullet {
+        left: 12px;
+        position: absolute;
+        display: block;
+        width: 6px;
+        height: 6px;
+        border-radius: 3px;
+        top: 5px;
+        background-color: gray;
+      }
+      span:first-child {
+        position: relative;
+        padding-left: 14px;
+        font-weight: 600;
+      }
+      span {
+        margin: 0 24px;
+      }
+      span:last-child {
+        color: #8f8f8f;
+      }
+    }
+  }
+  .pie-chart-container {
+    position: relative;
+    .recharts-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    .pie-chart__label {
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      right: 50%;
+      transform: translate(52px, -26px);
+      span {
+        font-size: 0.7rem;
+      }
+      p {
+        font-size: 1.2rem;
+      }
+    }
+  }
+
+  .table {
+    font-size: 0.9rem;
+    > div {
+      display: flex;
+      border-bottom: 1px solid #d0d0d0;
+      padding: 8px 12px;
+      &:last-child {
+        border-bottom: none;
+        padding-bottom: 12px;
+      }
+      &:first-child > div {
+        font-weight: 600;
+      }
+      > div {
+        flex-basis: 100px;
+        flex-grow: 1;
+      }
     }
   }
 }
