--- a/src/global.pcss
+++ b/src/global.pcss
@@ -130,3 +130,41 @@ h6 {
     max-width: 200px;
   }
 }
+
+.error {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  background-color: gray;
+  .message-container {
+    display: inline-block;
+    max-width: 500px;
+    margin: 0 auto;
+
+    border-radius: 8px;
+    background-color: white;
+    h2,
+    p {
+      padding: 22px;
+      color: #292929;
+    }
+    h2 {
+      font-weight: 400;
+      padding-bottom: 0;
+    }
+    p.message {
+      padding-top: 8px;
+      padding-bottom: 22px;
+    }
+    .reload {
+      cursor: pointer;
+      background-color: #f0284c;
+      border-radius: 0 0 8px 8px;
+      font-weight: 600;
+      color: white;
+    }
+  }
+}
