Close Button to close session #17

--- a/src/containers/AdminApp/styles.pcss
+++ b/src/containers/AdminApp/styles.pcss
@@ -205,6 +205,19 @@ html {
     .menu-button {
       margin-right: 30px;
     }
+    .modal {
+      .paper-container {
+        .paper {
+          .login {
+            width: 100%;
+            position: absolute;
+            bottom: 32px;
+            left: 0;
+            height: 60px;
+          }
+        }
+      }
+    }
   }
 }
 .DayPicker {
