--- a/src/global.pcss
+++ b/src/global.pcss
@@ -21,7 +21,7 @@ body {
   letter-spacing: -0.022em;
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   font-style: normal;
-  background: url('assets/app-icon.png') center center;
+  background-color: #f5f5f5;
 }
 
 *,
