Fixed on filter stuff

--- a/src/containers/AdminApp/styles.pcss
+++ b/src/containers/AdminApp/styles.pcss
@@ -184,13 +184,19 @@
         }
         .date-filter-container {
           position: relative;
-          .DayPicker {
+          .day-picker-container {
             position: absolute;
             right: 0;
             top: 40px;
             background-color: white;
             box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
             border-radius: 4px;
+            .button-container {
+              margin: 8px;
+              button {
+                width: 100%;
+              }
+            }
           }
         }
       }
