--- a/src/containers/AdminApp/styles.pcss
+++ b/src/containers/AdminApp/styles.pcss
@@ -150,6 +150,11 @@
     right: 0;
     width: 100%;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
+    .actions-container,
+    .actions-container span {
+      color: black !important;
+      margin-left: 0;
+    }
     &.--full-width {
       padding-left: 91px;
     }
