--- a/src/containers/AdminApp/Dashboard/styles.pcss
+++ b/src/containers/AdminApp/Dashboard/styles.pcss
@@ -19,6 +19,17 @@
       font-weight: normal;
       margin-bottom: 16px;
     }
+    .number {
+      width: 100%;
+      height: 400px;
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      color: #98B1CE;
+      h1 {
+        font-size: 4rem;
+      }
+    }
   }
   .actions {
     display: flex;
