--- a/src/containers/ClientApp/Dashboard/styles.pcss
+++ b/src/containers/ClientApp/Dashboard/styles.pcss
@@ -26,8 +26,15 @@
       font-size: 0.9rem;
       margin-bottom: 8px;
     }
+    .number {
+      width: 100%;
+      height: 400px;
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      color: #98B1CE;
+    }
   }
-
   .chart-data-container {
     display: flex;
     align-items: center;
