Fix toggle button

--- a/src/containers/AdminApp/styles.pcss
+++ b/src/containers/AdminApp/styles.pcss
@@ -119,6 +119,9 @@
           width: 239px;
           .toggle-button {
             display: block;
+            &::after {
+              display: none;
+            }
           }
           img {
             max-width: 80px;
