--- a/src/containers/ClientApp/Dashboard/styles.pcss
+++ b/src/containers/ClientApp/Dashboard/styles.pcss
@@ -1,3 +1,13 @@
+.dashboard {
+  h1 {
+    font-size: 1.8rem;
+    font-weight: 400;
+    span {
+      font-size: 1.6rem;
+      font-weight: 600;
+    }
+  }
+}
 #client-app {
   .dashboard {
     display: flex;
@@ -32,7 +42,7 @@
       align-items: center;
       display: flex;
       justify-content: center;
-      color: #98B1CE;
+      color: #98b1ce;
     }
   }
   .chart-data-container {
