--- a/src/containers/AdminApp/styles.pcss
+++ b/src/containers/AdminApp/styles.pcss
@@ -157,8 +157,10 @@
       width: 12px;
       height: 12px;
       border-radius: 50%;
-      margin-right: 14px;
+      margin-right: 10px;
+      padding: 8px;
       background-color: black;
+      display: block;
       &.--indexing {
         background-color: #e98d13;
       }
