--- a/src/containers/ClientApp/Dashboard/styles.pcss
+++ b/src/containers/ClientApp/Dashboard/styles.pcss
@@ -9,7 +9,11 @@
   }
 }
 #client-app {
+  .content {
+    margin-left: 0;
+  }
   .dashboard {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
   }
