--- a/src/containers/ClientApp/styles.pcss
+++ b/src/containers/ClientApp/styles.pcss
@@ -1,8 +1,18 @@
 #client-app {
+  .toolbar__logo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    max-width: 160px;
+    .toggle-button {
+      display: none;
+    }
+  }
   header {
     display: flex;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
     height: 65px;
+
     .header-content {
       background-color: white;
       flex: 1;
