--- a/src/components/EditUserModal/styles.pcss
+++ b/src/components/EditUserModal/styles.pcss
@@ -14,7 +14,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  .user-name {
+  .username {
+    display: flex;
+    margin-right: 8px;
+  }
+  .name {
+    display: flex;
+    margin-right: 8px;
+  }
+  .email {
+    display: flex;
+    margin-right: 8px;
+  }
+  .searchLimit {
+    display: flex;
+    margin-right: 8px;
+  }
+  .indexLimit {
+    display: flex;
     margin-right: 8px;
   }
   .error-pass {
