--- a/src/global.pcss
+++ b/src/global.pcss
@@ -3,8 +3,7 @@
 }
 
 html {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
   font-size: 106.25%;
   quotes: '“' '”';
 }
@@ -19,7 +18,7 @@ body {
   font-size: 17px;
   font-weight: 400;
   letter-spacing: -0.022em;
-  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
   font-style: normal;
   background-color: #f5f5f5;
 }
