--- a/src/containers/AdminApp/Admins/styles.pcss
+++ b/src/containers/AdminApp/Admins/styles.pcss
@@ -11,3 +11,26 @@
     margin-top: 16px;
   }
 }
+.--selected-sort {
+  position: relative;
+  user-select: none;
+  cursor: pointer;
+  &.--reverse::before {
+    transform: rotate(0deg) translateY(0px);
+  }
+  &::before {
+    position: absolute;
+    left: 10px;
+    top: 25px;
+    width: 0px;
+    height: 0px;
+    transform: rotate(180deg) translateY(6px);
+    background-color: transparent;
+    border-top: 5px solid gray;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    content: '';
+    display: block;
+  }
+}
