--- a/src/global.pcss
+++ b/src/global.pcss
@@ -167,3 +167,19 @@ h6 {
     }
   }
 }
+
+.notification-menu {
+  > div:last-child {
+    top: 60px !important;
+  }
+  .welcome-message {
+    h6 {
+      border-bottom: 1px solid #d6d6d6;
+      padding: 8px;
+      padding-top: 4px;
+    }
+    .welcome-message__content {
+      padding: 16px;
+    }
+  }
+}
