Added typography for client

--- a/src/components/ProfileDrawer/style.pcss
+++ b/src/components/ProfileDrawer/style.pcss
@@ -48,10 +48,11 @@
       justify-content: space-between;
       align-items: center;
       margin-bottom: 8px;
-      p {
-        color: #52a3d7;
+      button {
+        color: #5290d7;
         font-weight: 500;
-        font-size: 0.9rem;
+        font-size: 0.8rem;
+        background-color: white;
       }
     }
     h4 {
