--- a/src/global.pcss
+++ b/src/global.pcss
@@ -96,9 +96,10 @@ h5 {
   margin-bottom: 12px;
 }
 h6 {
-  color: gray;
-  font-weight: 500;
-  font-size: 0.8rem;
+  color: gray !important;
+  font-weight: 500 !important;
+  font-size: 0.9rem !important;
+  margin-bottom: 8px;
 }
 
 .circular-progress__container {
