--- a/src/containers/AdminApp/Dashboard/styles.pcss
+++ b/src/containers/AdminApp/Dashboard/styles.pcss
@@ -21,11 +21,11 @@
     }
     .number {
       width: 100%;
-      height: 400px;
+      min-height: 300px;
       align-items: center;
       display: flex;
       justify-content: center;
-      color: #98B1CE;
+      color: #98b1ce;
       h1 {
         font-size: 4rem;
       }
