--- a/src/containers/ClientApp/Dashboard/styles.pcss
+++ b/src/containers/ClientApp/Dashboard/styles.pcss
@@ -26,7 +26,7 @@
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
     padding: 16px;
     border-radius: 4px;
-    min-height: 270px;
+    min-height: 230px;
     &.--no-padding {
       padding: 0;
       h4 {
@@ -34,15 +34,9 @@
         padding-bottom: 8px;
       }
     }
-    h4 {
-      color: gray;
-      font-weight: 500;
-      font-size: 0.9rem;
-      margin-bottom: 8px;
-    }
     .number {
       width: 100%;
-      height: 400px;
+      min-height: 300px;
       align-items: center;
       display: flex;
       justify-content: center;
@@ -125,7 +119,7 @@
     > div {
       display: flex;
       border-bottom: 1px solid #d0d0d0;
-      padding: 8px 12px;
+      padding: 4px 16px;
       &:last-child {
         border-bottom: none;
         padding-bottom: 12px;
@@ -133,7 +127,7 @@
       &:first-child > div {
         font-weight: 600;
       }
-      > div {
+      > * {
         flex-basis: 100px;
         flex-grow: 1;
       }
