--- a/src/containers/ClientApp/styles.pcss
+++ b/src/containers/ClientApp/styles.pcss
@@ -12,7 +12,7 @@
     display: flex;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
     height: 65px;
-
+    padding-left: 180px;
     .header-content {
       background-color: white;
       flex: 1;
@@ -100,7 +100,7 @@ h5 {
   align-items: center;
   margin-top: 40px;
   margin-bottom: 8px;
-  p {
+  > * {
     font-size: 0.8rem;
     position: relative;
     padding-left: 12px;
