Added typography for admin

--- a/src/containers/AdminApp/styles.pcss
+++ b/src/containers/AdminApp/styles.pcss
@@ -92,12 +92,8 @@
       color: #fff !important;
     }
     a {
-      span,
-      svg {
-        opacity: 0.4;
-      }
-      &.active span,
-      &.active svg {
+      opacity: 0.4;
+      &.active {
         opacity: 1;
       }
     }
