--- a/src/containers/ClientApp/Dashboard/styles.pcss
+++ b/src/containers/ClientApp/Dashboard/styles.pcss
@@ -49,6 +49,7 @@
   }
   .pie-chart__legend {
     display: flex;
+    width: 60%;
     flex-direction: column;
     font-size: 0.9rem;
     p {
@@ -84,32 +85,48 @@
     }
   }
   .pie-chart-container {
-    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: center;
+    justify-content: center;
     .recharts-wrapper {
       position: absolute;
       top: 0;
       left: 0;
     }
-    .pie-chart__label {
-      text-align: center;
-      position: absolute;
-      left: 0;
-      width: 50%;
-      padding: 0 11%;
-      height: 100%;
+    .pie-chart-info {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      span {
-        font-size: 1.4rem;
-      }
-      p {
-        font-size: 2.4rem;
+      height: 100%;
+      width: 40%;
+      flex-direction: row;
+      .pie-chart-info-totals {
+        display: flex;
+        width: 20%;
+        height: 100%;
+        flex-direction: column;
+        .pie-chart__label {
+          display: flex;
+          flex-direction: column;
+          font-size: 0.9rem;
+          p {
+            display: inline-block;
+          }
+          text-align: center;
+          left: 0;
+          width: 50%;
+          padding: 0 11%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          span {
+            font-size: 1.4rem;
+          }
+          p {
+            font-size: 2.4rem;
+          }
+        }
       }
     }
   }
