Adding colors to pie chard

--- a/src/global.pcss
+++ b/src/global.pcss
@@ -102,6 +102,12 @@ h6 {
   margin-bottom: 8px;
 }
 
+h7 {
+  font-weight: 450 !important;
+  font-size: 0.8rem !important;
+  margin-bottom: 8px;
+}
+
 .circular-progress__container {
   position: relative;
   height: 24px;
