--- a/src/containers/ClientApp/Dashboard/styles.pcss
+++ b/src/containers/ClientApp/Dashboard/styles.pcss
@@ -48,6 +48,7 @@
     align-items: center;
   }
   .pie-chart__legend {
+    margin-left: 20px;
     display: flex;
     width: 60%;
     flex-direction: column;
